--- a/Card UI Design/css/style.scss
+++ b/Card UI Design/css/style.scss
@@ -51,22 +51,127 @@
 }
 
 .card2 {
-  background-color: skyblue;
+  background-image: linear-gradient(to bottom right, rgba(68, 68, 229, 1), rgba(105, 184, 161, 0.7)),
+    url(../images/card2__bgImg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 400px;
-  height: 300px;
+  height: 250px;
   margin: 20px;
+  position: relative;
+  border-radius: 15px;
+  &:hover {
+    box-shadow: 5px 5px 10px grey;
+  }
+  &__title {
+    color: white;
+    position: absolute;
+    font-weight: bold;
+    font-size: 1.5rem;
+    top: 12%;
+    left: 8%;
+  }
+  &__content {
+    color: white;
+    position: absolute;
+    top: 32%;
+    left: 8%;
+    font-size: 0.8rem;
+    width: 80%;
+  }
+  a {
+    position: absolute;
+    display: inline-block;
+    text-decoration: none;
+    bottom: 23%;
+    left: 8%;
+    border: 1px solid white;
+    color: white;
+    border-radius: 3px;
+    height: 40px;
+    line-height: 40px;
+    padding: 0px 25px;
+    font-size: 0.8rem;
+    font-weight: bold;
+    letter-spacing: 2px;
+    &:hover {
+      border: 1px solid rgb(128, 142, 235);
+      color: rgb(128, 142, 235);
+      background-color: white;
+    }
+  }
 }
 
 .card3 {
-  background-color: orange;
-  width: 400px;
-  height: 300px;
+  background-color: white;
+  width: 420px;
+  height: 220px;
   margin: 20px;
+  position: relative;
+  border-radius: 15px;
+  border: 1px solid rgba(rgb(154, 153, 153), 0.1);
+  &:hover {
+    box-shadow: 5px 5px 10px grey;
+    // box-shadow: 1px 1px 15px rgb(159, 159, 159);
+  }
+  .information {
+    img {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      position: absolute;
+      top: 10%;
+      left: 5%;
+    }
+    &__name {
+      font-weight: bold;
+      position: absolute;
+      top: 4%;
+      left: 18%;
+    }
+    &__title {
+      font-size: 0.8rem;
+      position: absolute;
+      top: 18%;
+      left: 18%;
+    }
+    a {
+      display: inline-block;
+      text-decoration: none;
+      color: #484fd3;
+      font-weight: bold;
+      &:hover {
+        color: #ffd43b;
+      }
+    }
+    &__rating {
+      position: absolute;
+      top: 10%;
+      right: 5%;
+      letter-spacing: -1px;
+      font-size: 0.7rem;
+    }
+  }
+  &__content {
+    position: absolute;
+    bottom: 5%;
+    padding: 0px 25px;
+    line-height: 1.6;
+  }
 }
 
 .card4 {
   background-color: pink;
   width: 400px;
-  height: 300px;
+  height: 250px;
   margin: 20px;
+  position: relative;
+  .information {
+    position: absolute;
+    img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+    }
+  }
 }
