--- a/RegistrationForm-Practice/css/style.css
+++ b/RegistrationForm-Practice/css/style.css
@@ -2,29 +2,34 @@ form {
   color: #384047;
   max-width: 580px;
   margin: 10px auto;
-  padding: 10px 20px 60px 20px;
+  padding: 10px 20px 60px;
   background: #f4f7f8;
-  border-radius: 8px; }
+  border-radius: 8px;
+}
 
 h1 {
   text-align: center;
-  margin: 0 0 30px 0; }
+  margin: 0 0 30px 0;
+}
 
 fieldset {
   border: none;
-  margin-bottom: 30px; }
-  fieldset legend {
-    font-size: 1.4rem;
-    margin-bottom: 10px; }
+  margin-bottom: 30px;
+}
+fieldset legend {
+  font-size: 1.4rem;
+  margin-bottom: 10px;
+}
 
 legend::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 16px;
   height: 16px;
   background-color: #007a5a;
   border-radius: 50%;
-  margin-right: 15px; }
+  margin-right: 15px;
+}
 
 .text__input,
 select {
@@ -37,14 +42,17 @@ select {
   background-color: #e8eeef;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
   margin-bottom: 30px;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .gender {
-  margin-bottom: 60px; }
+  margin-bottom: 60px;
+}
 
-input[type='radio'],
-input[type='checkbox'] {
-  margin: 0 4px 8px 0; }
+input[type=radio],
+input[type=checkbox] {
+  margin: 0 4px 8px 0;
+}
 
 button {
   width: 100%;
@@ -55,11 +63,11 @@ button {
   padding: 10px;
   background-color: #4bc970;
   font-size: 18px;
-  color: #fff; }
+  color: #fff;
+}
 
 button:hover {
   border-color: #4bc970;
   color: #4bc970;
-  background-color: #fff; }
-
-/*# sourceMappingURL=style.css.map */
+  background-color: #fff;
+}/*# sourceMappingURL=style.css.map */
