--- a/Personal Website Vanilla/css/style.css
+++ b/Personal Website Vanilla/css/style.css
@@ -3,32 +3,54 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
   position: relative; }
 
 html {
   scroll-behavior: smooth; }
+
+button {
+  outline: none;
+  border: none;
+  padding: 0;
+  background: transparent;
+  cursor: pointer; }
 
 header {
   position: fixed;
   z-index: 1;
   height: 80px;
   box-shadow: 0 1px 0 #f9fafb;
-  width: 100%; }
-
-nav {
-  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0 20px; }
-  nav ul {
+  header .brand {
+    flex-grow: 1; }
+  header nav ul {
     list-style: none;
-    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px; }
-    nav ul li:first-child {
-      flex-grow: 1; }
-    nav ul .nav__items {
+    header nav ul .nav-item {
       text-decoration: none;
-      cursor: pointer; }
+      cursor: pointer;
+      color: #666666;
+      padding: 13px 16px; }
+      header nav ul .nav-item:hover {
+        background-color: #d9d9d9;
+        opacity: 0.9;
+        border-radius: 8px; }
+  header .menu-btn {
+    display: none; }
+
+section {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 /*# sourceMappingURL=style.css.map */
