--- a/Personal Website Vanilla/css/style.scss
+++ b/Personal Website Vanilla/css/style.scss
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
   position: relative;
 }
 
@@ -11,29 +12,55 @@ html {
   scroll-behavior: smooth;
 }
 
+button {
+  outline: none;
+  border: none;
+  padding: 0;
+  background: transparent;
+  cursor: pointer;
+}
+
 header {
   position: fixed;
   z-index: 1;
   height: 80px;
   box-shadow: 0 1px 0 #f9fafb;
   width: 100%;
-}
-nav {
-  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0 20px;
-  ul {
-    list-style: none;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    li:first-child {
-      flex-grow: 1;
-    }
-    .nav__items {
-      text-decoration: none;
-      cursor: pointer;
+  .brand {
+    flex-grow: 1;
+  }
+  nav {
+    ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      .nav-item {
+        text-decoration: none;
+        cursor: pointer;
+        color: #666666;
+        padding: 13px 16px;
+        &:hover {
+          background-color: #d9d9d9;
+          opacity: 0.9;
+          border-radius: 8px;
+        }
+      }
     }
   }
+  .menu-btn {
+    display: none;
+  }
+}
+section {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
