--- a/Personal Website Vanilla/css/style.css
+++ b/Personal Website Vanilla/css/style.css
@@ -3,54 +3,124 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
-  font-size: 1rem;
+  font-size: 16px;
   position: relative; }
 
 html {
   scroll-behavior: smooth; }
 
+a {
+  text-decoration: none;
+  cursor: pointer; }
+
 button {
   outline: none;
   border: none;
-  padding: 0;
+  padding: none;
   background: transparent;
   cursor: pointer; }
 
-header {
+nav .logo a, nav ul .navbar__item--active, .home-info__title h1 .name {
+  background-image: linear-gradient(315deg, #742df6 25%, #25a2ef);
+  background-clip: text;
+  color: transparent; }
+
+section {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center; }
+
+nav {
   position: fixed;
   z-index: 1;
   height: 80px;
   box-shadow: 0 1px 0 #f9fafb;
   width: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
   padding: 0 20px; }
-  header .brand {
+  nav .logo {
     flex-grow: 1; }
-  header nav ul {
+    nav .logo a {
+      font-size: 24px;
+      font-weight: 500; }
+  nav ul {
     list-style: none;
+    gap: 20px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px; }
-    header nav ul .nav-item {
-      text-decoration: none;
-      cursor: pointer;
+    align-items: center; }
+    nav ul .navbar__item {
       color: #666666;
       padding: 13px 16px; }
-      header nav ul .nav-item:hover {
+      nav ul .navbar__item:hover {
         background-color: #d9d9d9;
         opacity: 0.9;
         border-radius: 8px; }
-  header .menu-btn {
+    nav ul .navbar__item--active {
+      color: #742df6; }
+  nav .menu-btn {
     display: none; }
 
-section {
-  min-height: 100vh;
-  width: 100%;
+.home {
+  justify-content: space-around; }
+
+.home-info {
   display: flex;
-  align-items: center;
-  justify-content: center; }
+  flex-direction: column;
+  width: 50%; }
+  .home-info__title h1 {
+    font-weight: 500;
+    color: #42446e;
+    font-size: 32px; }
+    .home-info__title h1 .name {
+      font-size: 36px;
+      font-weight: 700; }
+    .home-info__title h1 .animation {
+      display: block;
+      font-weight: 700;
+      color: #42446e;
+      font-size: 26px;
+      margin: 15px 0;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 0;
+      border-right: 2px solid #42446e;
+      animation: mark 0.5s step-end infinite, write 6s steps(22, end) infinite; }
+@keyframes mark {
+  50% {
+    border-right: transparent; } }
+@keyframes write {
+  20% {
+    width: 22ch; }
+  70% {
+    width: 22ch; }
+  85% {
+    width: 0; }
+  100% {
+    width: 0; } }
+  .home-info__title p {
+    color: #666666;
+    font-size: 18px;
+    line-height: 1.5; }
+  .home-info__contacts .social-media {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 160px;
+    margin-bottom: 10px; }
+    .home-info__contacts .social-media .fa-linkedin {
+      font-size: 28px;
+      color: #0a66c2; }
+    .home-info__contacts .social-media .fa-github {
+      font-size: 28px;
+      color: #000; }
+
+.test {
+  width: 300px;
+  height: 300px;
+  font-size: 500px;
+  color: red;
+  background-color: lightblue; }
 
 /*# sourceMappingURL=style.css.map */
