--- a/Personal Website Vanilla/css/style.css
+++ b/Personal Website Vanilla/css/style.css
@@ -35,6 +35,7 @@ section {
 nav {
   position: fixed;
   z-index: 1;
+  background-color: #fff;
   height: 80px;
   box-shadow: 0 1px 0 #f9fafb;
   width: 100%;
@@ -64,6 +65,7 @@ nav {
     display: none; }
 
 .home {
+  padding-top: 80px;
   justify-content: space-around; }
   .home .home-info {
     display: flex;
@@ -170,6 +172,13 @@ nav {
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
         margin: 20px 0 10px 0;
         transition: opacity 0.6s ease-out; }
+        .skills .skills-info__technologies__card img {
+          width: 48px;
+          height: 48px; }
+        .skills .skills-info__technologies__card span {
+          display: inline-block;
+          margin-left: 20px;
+          font-weight: 500; }
 
 .test {
   width: 300px;
